# auraswap

./: Cargo.toml  README.md
contracts/liquidity-pool/: Cargo.toml
contracts/liquidity-pool/src/: lib.rs  test.rs
contracts/liquidity-pool/test_snapshots/test/: test_liquidity_pool_lifecycle.1.json
contracts/router/: Cargo.toml
contracts/router/src/: lib.rs  test.rs
contracts/router/test_snapshots/test/: test_router_slippage_protection.1.json  test_router_swap.1.json
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs  test.rs
contracts/token/test_snapshots/test/: test_token_lifecycle.1.json  test_transfer_insufficient_balance.1.json
frontend/: package.json
frontend/src/app/: page.tsx
frontend/src/app/api/admin/logs/: route.ts
frontend/src/app/api/pool/stats/: route.ts
frontend/src/app/api/swaps/: route.ts
frontend/src/hooks/: useRealtimeEvents.ts
frontend/src/lib/: amm.ts  freighter.ts
frontend/src/models/: AdminLog.ts  Pool.ts  Swap.ts
