[workspace]
resolver = "2"

members = [
    "contracts/token",
    "contracts/liquidity-pool",
    "contracts/router",
]

[workspace.dependencies]
soroban-sdk = "25.3.1"
soroban-sdk-macros = "25.3.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
